# socketeer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/superpowers/plans/: 2026-06-29-backpressure-resilience.md  2026-06-29-public-api-cleanup.md
docs/superpowers/specs/: 2026-06-29-backpressure-resilience-design.md  2026-06-29-public-api-cleanup-design.md
examples/: echo_chat.rs
examples/echo_chat/: Cargo.toml
examples/echo_chat/src/: main.rs
src/: codec.rs  config.rs  error.rs  handler.rs  lib.rs  mock_server.rs  socket_loop.rs  split.rs
tests/: integration.rs  public_api.rs
tests/support/: mod.rs
