[package]
name = "socketeer"
version = "0.1.0"
edition = "2021"
description = "Simplified websocket client based on Tokio-Tungstenite"
authors = ["Zach Heylmun <zheylmun@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zheylmun/socketeer"

[features]
mocking = []
tracing = ["dep:tracing"]

[dependencies]
bytes = "1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio = { version = "1", default-features = false, features = [
    "net",
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing = { version = "0.1", optional = true }
url = "2"

[dev-dependencies]
socketeer = { path = ".", features = ["mocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
