[package]
name = "socketeer"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Simplified websocket client based on Tokio-Tungstenite"
authors = ["Zach Heylmun <zheylmun@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zheylmun/socketeer"

[features]
mocking = []
msgpack = ["dep:rmp-serde"]
tracing = ["dep:tracing"]

[dependencies]
bytes = "1"
futures = "0.3"
futures-util = "0.3"
rmp-serde = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tokio = { version = "1", default-features = false, features = [
    "net",
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing = { version = "0.1", optional = true }
url = "2"

[[example]]
name = "echo_chat"
required-features = ["mocking"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"
